--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -5,7 +5,7 @@
     <h2>Profile</h2>
     <form method="post">
         <div class="profile-frame">
-            <label>Move the validation code into a function and call the function then OK</label>
+            <label>Move the validation code into a function and call the function then OK</label><br>
             <div class="form-left">
                 <label>Full Name as per IC</label>
                 <input type="text" name="username" value="{{ admin_name }}" readonly><br>
