--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -4,7 +4,7 @@
 <div class="menu-section">
     <h2>Profile</h2>
     <form method="post">
-        <label>Move the validation code into a function and call the function then OK</label><br>
+        <label>Move the validation code into a function and call the function then OK</label><br><br>
         <div class="profile-frame">
             <div class="form-left">
                 <label>Full Name as per IC</label>
