--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -23,11 +23,11 @@
                 <label>Department</label>
                 <input type="text" name="department", value="{{ admin_department_text}}" readonly><br>
 
-                <label>Contact Number</label>
+                <label>Contact Number (Editable)</label>
                 <input type="tel" name="contact" value="{{ admin_contact_text }}"><br>  
 
                 <div class="password-container">
-                    <label>Password</label> 
+                    <label>Password (Editable)</label> 
                     <input type="password" name="password1" value="{{ admin_password1_text }}">
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
@@ -35,7 +35,7 @@
                 </div><br>
 
                 <div class="password-container">
-                    <label> Confirm Password</label>
+                    <label> Confirm Password (Editable)</label>
                     <input type="password" name="password2" value="{{ admin_password2_text }}">
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
