--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -4,7 +4,8 @@
 <div class="menu-section">
     <h2>Profile</h2>
     <form method="post">
-        <label>Move the validation code into a function and call the function then OK</label><br><br>
+        <label>Now display out the contact number value, everytime click on the button will show 'Similar Contact Number Update'</label><br>
+        <lable>Does allow admin to change their department?</lable><br><br>
         <div class="profile-frame">
             <div class="form-left">
                 <label>Full Name as per IC</label>
