--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -8,7 +8,8 @@
     <h2>Manage Department</h2>
     <form method="POST">
         <h3>Insert Below Data to Add New Department. Ratio Optional.</h3>
-        <label>Now able to add a new department, does it need a uplaod function?</label><br><br>
+        <label>Now able to add a new department, does it need a upload function?</label>
+        <label>Validate that department code and name are not duplicate; ratio can be left empty</label>
         <div class="profile-frame">
             <div class="form-middle">
                 <table class="enter-data-table">
