--- a/app/templates/adminPart/adminManageLecturer.html
+++ b/app/templates/adminPart/adminManageLecturer.html
@@ -7,6 +7,7 @@
     <form id="uploadLecturerForm" action="{{ url_for('admin_manageLecturer') }}" method="POST" enctype="multipart/form-data">
         <h3>Choose Either 'Upload' or 'Manual' to Insert New Lecturer</h3>
         <label>Fix the Department and Role dropdowns to standardize field layout</label>
+        <label>With the validation of id, email, and contact must be the unique</label>
         <div class="profile-frame">
             <div class="form-left">
                 <h4 style="text-align: center;">File Upload Section (Check need remove or not)</h4>
