--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -5,7 +5,7 @@
     <h2>Manage Exam</h2>
     <form id="uploadExamForm" action="{{ url_for('admin_manageExam') }}" method="POST" enctype="multipart/form-data">
         <h3>Choose Either 'Upload' or 'Manual' to Insert New Exam</h3>
-        <label>Combine up Date&Day and StartTime&EndTime</label>
+        <label>Combine up Date&Day and StartTime&EndTime</label><br>
         <label>With the validation of no duplicate exam course code, section with date and time</label>
         <div class="profile-frame">
             <div class="form-left">
