--- a/app/templates/adminPart/adminManageInvigilationTimetable.html
+++ b/app/templates/adminPart/adminManageInvigilationTimetable.html
@@ -8,8 +8,8 @@
     <h2>Manage Invigilation Timetable</h2>    
     <form method="POST">  
         <h3>Insert Ratio For Each Department to Generate Invigilation Timetable</h3>
-        <label>Check this part, whether each admin able to select for all or just under self</label>
-        <lable>Try to display out all the ratio based on the department on that page instead of empty frame</lable>
+        <label>Check this part, whether each admin able to select for all or just under self</label><br>
+        <lable>Try to display out all the ratio based on the department on that page instead of empty frame</lable><br>
         <label>Now able to update the ratio, but without the main function to read the lecturers flexibility</label>
         <div style="display: flex; justify-content: space-evenly;">
             <!-- Left Table -->
