--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -5,7 +5,7 @@
     <h2>Profile</h2>
     <form method="post">
         <label>Now display out the contact number value, everytime click on the button will show 'Similar Contact Number Update'</label><br>
-        <lable>Does allow admin to change their department?</lable>
+        <label>Does allow admin to change their department?</label>
         <div class="profile-frame">
             <div class="form-left">
                 <label>Full Name as per IC</label>
