--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -40,14 +40,11 @@
                         <td>Exam Day</td>
                         <td><input type="text" name="examDay" id="examDay" value="{{ examDay_text }}" readonly></td>
                     </tr>
-                    <tr>
-                        <td>Start Time</td>
-                        <td><input type="text" name="startTime" value="{{ startTime_text }}"></td>
-                    </tr>
-                    <tr>
-                        <td>End Time</td>
-                        <td><input type="text" name="endTime" value="{{ endTime_text }}"></td>
-                    </tr>
+                        <label for="startTime">Start Time:</label>
+                        <input type="time" id="startTime" name="startTime" value="{{ startTime_text }}" min="08:00" max="20:00" required>
+
+                        <label for="endTime">End Time:</label>
+                        <input type="time" id="endTime" name="endTime" value="{{ endTime_text }}" min="08:00" max="20:00" required>
                     <tr>
                         <td>Program Code</td>
                         <td><input type="text" name="programCode" value="{{ programCode_text }}"></td>
