--- a/app/templates/adminPart/adminManageInvigilationTimetable.html
+++ b/app/templates/adminPart/adminManageInvigilationTimetable.html
@@ -82,6 +82,7 @@
                     <th>Lecturer</th>
                     <th>No. of Students</th>
                     <th>Room</th>
+                    <th>Chief</th>
                     <th>Invigilator 1</th>
                     <th>Invigilator 2</th>
                     <th>Backup Invigilator</th>
@@ -101,6 +102,7 @@
                     <td>{{ row.examLecturer }}</td>
                     <td>{{ row.examTotalStudent }}</td>
                     <td>{{ row.examVenue }}</td>
+                    <td>{{ row.examLecturer }}</td>
                     <td>{{ row.examLecturer }}</td>
                     <td>{{ row.examLecturer }}</td>
                     <td>{{ row.examLecturer }}</td>
