--- a/app/templates/adminPart/adminManageInvigilationTimetable.html
+++ b/app/templates/adminPart/adminManageInvigilationTimetable.html
@@ -82,7 +82,7 @@
                     <th>Lecturer</th>
                     <th>No. of Students</th>
                     <th>Room</th>
-                    <th>Chief</th>
+                    <th>Chief Inviglator</th>  
                     <th>Invigilator 1</th>
                     <th>Invigilator 2</th>
                     <th>Backup Invigilator</th>
