--- a/app/templates/frontPart/register.html
+++ b/app/templates/frontPart/register.html
@@ -51,6 +51,13 @@
             </div>
     
             <div class="form-right"> 
+                <label>Gender</label>
+                <select name="gender" required>
+                    <option value="" disabled selected>Select Gender</option>
+                    <option>Male</option>
+                    <option>Female</option>
+                </select>
+
                 <div class="password-container">
                     <label>Password</label>
                     <input type="password" name="password1" value="{{ password1_text }}">
