--- a/app/templates/adminPart/adminManageInvigilationTimetable.html
+++ b/app/templates/adminPart/adminManageInvigilationTimetable.html
@@ -13,7 +13,7 @@
         <label>Now able to update the ratio, but without the main function to read the lecturers flexibility</label>
         <!--
         <div style="display: flex; justify-content: space-evenly;">
-            
+            Left Table
             <div>
                 <table class="enter-data-table"> 
                     <tr style="text-align: center;">
@@ -30,7 +30,7 @@
                 </table>    
             </div>
 
-            
+            Right Table 
             <div>
                 <table class="enter-data-table"> 
                     <tr style="text-align: center;">
@@ -47,7 +47,6 @@
                 </table>    
             </div>
         </div>
-        -->
         <br>
 
         {% with messages = get_flashed_messages(with_categories=true) %}
@@ -64,6 +63,7 @@
         <div class="button-wrapper">
                 <button type="submit">Generate Invigilation Timetable</button>
         </div>
+        -->
     </form>
 
 
