--- a/app/templates/frontPart/register.html
+++ b/app/templates/frontPart/register.html
@@ -54,9 +54,9 @@
                 <label>Gender</label>
                 <select name="gender" required>
                     <option value="" disabled selected>Select Gender</option>
-                    <option>Male</option>
-                    <option>Female</option>
-                </select>
+                    <option value="MALE">MALE</option>
+                    <option value="FEMALE">FEMALE</option>
+                </select><br>
 
                 <div class="password-container">
                     <label>Password</label>
