--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -5,8 +5,7 @@
 <div class="menu-section">
     <h2>Manage Department</h2>
     <form method="POST">
-        <h3>Insert Below Data to Add New Department</h3>
-        <label>Now able to add a new department, does it need a upload function?/tValidate that department code and name are not duplicate</label><br>
+        <h3>Insert Below Data to Add New Department (Does need a Upload function? and Validate Code and Name are Unique)</h3>
         <div class="profile-frame">
             <div class="form-middle">
                 <table class="enter-data-table">
