--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -63,7 +63,7 @@
                     </tr>
                     <tr>
                         <td>Practical Lecturer</td>
-                        <td><input type="text" name="coursePratical" value="{{ coursePratical_text }}"></td>
+                        <td><input type="text" name="coursePractical" value="{{ coursePractical_text }}"></td>
                     </tr>
                     <tr>
                         <td>Tutorial Lecturer</td>
@@ -138,8 +138,8 @@
                     <td>{{ row.courseSection }}</td>
                     <td>{{ row.courseName }}</td>
                     <td>{{ row.courseHour }}</td>
-                    <td>{{ row.department }}</td>
-                    <td>{{ row.coursePratical }}</td>
+                    <td>{{ row.courseDepartment }}</td>
+                    <td>{{ row.coursePractical }}</td>
                     <td>{{ row.courseTutorial }}</td>
                 </tr>
                 {% endfor %}
