--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -315,6 +315,7 @@ label {
 
 input, select{
     width: 100%;
+    max-width: 250%;
     padding: 10px;
     margin: 1% 0;
     box-sizing: border-box;
