--- a/app/templates/frontPart/register.html
+++ b/app/templates/frontPart/register.html
@@ -37,7 +37,7 @@
                     <option value="DEAN">DEAN</option>
                     <option value="HOP">(HOP) HEAD OF PROGRAM</option>
                     <option value="ADMIN">ADMIN</option>
-                </select>
+                </select><br>
 
                 <label id="departmentLabel">Department</label>
                 <select name="department" required>
