--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -17,6 +17,9 @@
                 <label>Email Address</label>
                 <input type="text" name="email" value="{{ admin_email }}" readonly><br>
 
+                <label>Gender</label>
+                <input type="text" name="gender" value="{{ admin_gender }}" readonly><br>
+
                 <label>Role Based</label>
                 <input type="text" name="role", value="{{ admin_role_text}}" readonly>
             </div>
