--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -9,7 +9,7 @@
         <label>Done with the validation of the input with not allow similar of course code and section</label>
         <div class="profile-frame">
             
-            <h4 style="text-align: center;">File Upload Section</h4>
+            <h4 style="text-align: center;">File Upload Section</h4><br>
             <label for="course_list">
                 <div class="upload-container" id="courseUploadContainer">
                     <div class="upload-text">
@@ -26,7 +26,7 @@
             <br><br><br>
             
 
-            <h4 style="text-align: center;">Manual Data Entry Section</h4>
+            <h4 style="text-align: center;">Manual Data Entry Section</h4><br>
             <table class="enter-data-table">
                 <tr style="text-align: center;">
                     <th>Field</th>
