--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -218,7 +218,7 @@ html, body {
     width: 100%;
     border-collapse: collapse;
     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    table-layout: fixed;  /* Prevent layout shift */
+    table-layout: auto;  /* Prevent layout shift */
 }
 
 .user-data-table th, .enter-data-table th {
@@ -290,11 +290,12 @@ form {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+/*
 .profile-frame{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-}
+}*/
 
 
 .form-left, .form-right, .form-middle {
