--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -7,71 +7,70 @@
         <h3>Choose Either 'Upload' or 'Manual' to Insert New Course</h3>
         <lable>No errors encountered so far</lable><br>
         <label>Done with the validation of the input with not allow similar of course code and section</label>
-        <div class="profile-frame">
-            <div class="form-left">
-                <h4 style="text-align: center;">File Upload Section</h4>
-                <label for="course_list">
-                    <div class="upload-container" id="courseUploadContainer">
-                        <div class="upload-text">
-                            Upload a file with an empty first row. Data should start from columns A to D,<br> 
-                            labeled as: 'Code', 'Section', 'Name', and 'CreditHour'<br><br><br>
-                            Click to upload or drag and drop with below file format
-                        </div>
-                        <div class="file-types">XLSX, XLS, or XLSM</div><br>
-                        <!-- Selected file display -->
-                        <div id="courseSelectedFileName" class="file-name-display"></div>
-                    </div>
-                </label>
-                <input type="file" id="course_list" name="course_file" accept=".xlsx,.xls,.xlsm" style="display: none;">
-            </div>
 
-            <div class="form-right" style="width: 30%;">
-                <h4 style="text-align: center;">Manual Data Entry Section</h4>
-                <table class="enter-data-table">
-                    <tr style="text-align: center;">
-                        <th>Field</th>
-                        <th>Input</th>
-                    </tr>
-                    <tr>
-                        <td><label id="departmentLabel">Department</label></td>
-                        <td>
-                            <select name="courseDepartment">
-                                <option value="" disabled selected>Select Department</option>
-                                {% for dept in department_data %}
-                                    <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
-                                        ({{ dept.departmentCode }}) {{ dept.departmentName }}
-                                    </option>
-                                {% endfor %}
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Course Code</td>
-                        <td><input type="text" name="courseCode" value="{{ courseCode_text }}"></td>
-                    </tr>
-                    <tr>
-                        <td>Course Section</td>
-                        <td><input type="text" name="courseSection" value="{{ courseSection_text }}"></td>
-                    </tr>
-                    <tr>
-                        <td>Course Name</td>
-                        <td><input type="text" name="courseName" value="{{ courseName_text }}"></td>
-                    </tr>
-                    <tr>
-                        <td>Course Credit Hours</td>
-                        <td><input type="number" name="courseHour" value="{{ courseHour_text }}"></td>
-                    </tr>
-                    <tr>
-                        <td>Practical Lecturer</td>
-                        <td><input type="text" name="coursePractical" value="{{ coursePractical_text }}"></td>
-                    </tr>
-                    <tr>
-                        <td>Tutorial Lecturer</td>
-                        <td><input type="number" name="courseTutorial" value="{{ courseTutorial_text }}"></td>
-                    </tr>
-                </table>
+            
+        <h4 style="text-align: center;">File Upload Section</h4><br>
+        <label for="course_list">
+            <div class="upload-container" id="courseUploadContainer">
+                <div class="upload-text">
+                    Upload a file with an empty first row. Data should start from columns A to D,<br> 
+                    labeled as: 'Code', 'Section', 'Name', and 'CreditHour'<br><br><br>
+                    Click to upload or drag and drop with below file format
+                </div>
+                <div class="file-types">XLSX, XLS, or XLSM</div><br>
+                <!-- Selected file display -->
+                <div id="courseSelectedFileName" class="file-name-display"></div>
             </div>
-        </div>
+        </label>
+        <input type="file" id="course_list" name="course_file" accept=".xlsx,.xls,.xlsm" style="display: none;">
+        <br><br><br>
+        
+
+        <h4 style="text-align: center;">Manual Data Entry Section</h4><br>
+        <table class="enter-data-table" style="width: 80%;">
+            <tr style="text-align: center;">
+                <th>Field</th>
+                <th>Input</th>
+            </tr>
+            <tr>
+                <td><label id="departmentLabel">Department</label></td>
+                <td>
+                    <select name="courseDepartment">
+                        <option value="" disabled selected>Select Department</option>
+                        {% for dept in department_data %}
+                            <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
+                                ({{ dept.departmentCode }}) {{ dept.departmentName }}
+                            </option>
+                        {% endfor %}
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>Course Code</td>
+                <td><input type="text" name="courseCode" value="{{ courseCode_text }}"></td>
+            </tr>
+            <tr>
+                <td>Course Section</td>
+                <td><input type="text" name="courseSection" value="{{ courseSection_text }}"></td>
+            </tr>
+            <tr>
+                <td>Course Name</td>
+                <td><input type="text" name="courseName" value="{{ courseName_text }}"></td>
+            </tr>
+            <tr>
+                <td>Course Credit Hours</td>
+                <td><input type="number" name="courseHour" value="{{ courseHour_text }}"></td>
+            </tr>
+            <tr>
+                <td>Practical Lecturer</td>
+                <td><input type="text" name="coursePractical" value="{{ coursePractical_text }}"></td>
+            </tr>
+            <tr>
+                <td>Tutorial Lecturer</td>
+                <td><input type="number" name="courseTutorial" value="{{ courseTutorial_text }}"></td>
+            </tr>
+        </table>
+
         <br>
 
         <!-- Result feedback -->
