--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -291,8 +291,9 @@ form {
 }
 
 .profile-frame{
-    width: 80%;
-    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 
