--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -25,7 +25,7 @@
                 <input type="file" id="course_list" name="course_file" accept=".xlsx,.xls,.xlsm" style="display: none;">
             </div>
 
-            <div class="form-right">
+            <div class="profile-frame">
                 <h4 style="text-align: center;">Manual Data Entry Section</h4>
 
                 <div class="form-right">
