--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -291,13 +291,16 @@ form {
 }
 
 .profile-frame{
-    display: flex;
+    width: 80%;
+    margin: auto;
+    /*display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-around;*/
 }
 
 
 .form-left, .form-right, .form-middle {
+    width: 40%;
     display: flex;
     flex-direction: column;
     margin: auto;
