--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -7,7 +7,7 @@
         <h3>Choose Either 'Upload' or 'Manual' to Insert New Course</h3>
         <lable>No errors encountered so far</lable><br>
         <label>Done with the validation of the input with not allow similar of course code and section</label>
-        <div class="profile-frame">
+        <div class="function-frame">
             <div class="form-left">
                 <h4 style="text-align: center;">File Upload Section</h4>
                 <label for="course_list">
