--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -10,7 +10,7 @@
 
         <!-- Top Centered Tabs -->
         <div class="tab-container">
-            <div class="tab-nav">
+            <div class="tab-nav2">
                 <a href="#" class="tab-link active" onclick="showSection('uploadSection', event)">
                     <i class="fas fa-upload"></i>
                     <span>Upload File</span>
