--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -90,7 +90,7 @@ html, body {
 }
 
 .tab-nav2 {
-    display: inline-block;
+    display: ruby-text;
     background-color: #f1f1f1;
     border-radius: 8px;
     padding: 8px 16px;
@@ -318,7 +318,7 @@ form {
 
 
 .form-left, .form-right, .form-middle {
-    width: 40%;
+    /*width: 40%;*/
     display: flex;
     flex-direction: column;
 }
