--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -92,9 +92,9 @@ html, body {
 .tab-nav2 {
     display: ruby-text;
     background-color: #f1f1f1;
-    border-radius: 8px;
-    padding: 8px 16px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    border-radius: 10px;
+    padding: 15px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
 }
 
 .tab-link {
@@ -318,7 +318,7 @@ form {
 
 
 .form-left, .form-right, .form-middle {
-    /*width: 40%;*/
+    width: 40%;
     display: flex;
     flex-direction: column;
 }
