--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -63,56 +63,56 @@
     <form id="manualForm" action="{{ url_for('admin_manageCourse') }}" method="POST" style="display: none;">
         <div id="manualSection" class="function-frame">
             <h4 style="text-align: center;">Manual Data Entry Section</h4>
-            <div class="form-right">
-                <table class="enter-data-table">
-                    <tr style="text-align: center;"><th>Field</th><th>Input</th></tr>
-                    <tr>
-                        <td><label id="departmentLabel">Department</label></td>
-                        <td>
-                            <select name="courseDepartment" required>
-                                <option value="" disabled selected>Select Department</option>
-                                {% for dept in department_data %}
-                                    <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
-                                        ({{ dept.departmentCode }}) {{ dept.departmentName }}
-                                    </option>
-                                {% endfor %}
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Course Code</td>
-                        <td><input type="text" name="courseCode" value="{{ courseCode_text }}" required></td>
-                    </tr>
-                    <tr>
-                        <td>Course Section</td>
-                        <td><input type="text" name="courseSection" value="{{ courseSection_text }}" required></td>
-                    </tr>
-                    <tr>
-                        <td>Course Name</td>
-                        <td><input type="text" name="courseName" value="{{ courseName_text }}" required></td>
-                    </tr>
-                </table>
+            <div class="profile-frame">
+                <div class="form-right">
+                    <table class="enter-data-table">
+                        <tr style="text-align: center;"><th>Field</th><th>Input</th></tr>
+                        <tr>
+                            <td><label id="departmentLabel">Department</label></td>
+                            <td>
+                                <select name="courseDepartment" required>
+                                    <option value="" disabled selected>Select Department</option>
+                                    {% for dept in department_data %}
+                                        <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
+                                            ({{ dept.departmentCode }}) {{ dept.departmentName }}
+                                        </option>
+                                    {% endfor %}
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Course Code</td>
+                            <td><input type="text" name="courseCode" value="{{ courseCode_text }}" required></td>
+                        </tr>
+                        <tr>
+                            <td>Course Section</td>
+                            <td><input type="text" name="courseSection" value="{{ courseSection_text }}" required></td>
+                        </tr>
+                        <tr>
+                            <td>Course Name</td>
+                            <td><input type="text" name="courseName" value="{{ courseName_text }}" required></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="form-right">
+                    <table class="enter-data-table">
+                        <tr style="text-align: center;"><th>Field</th><th>Input</th></tr>
+                        <tr>
+                            <td>Course Credit Hours</td>
+                            <td><input type="number" name="courseHour" value="{{ courseHour_text }}" required></td>
+                        </tr>
+                        <tr>
+                            <td>Practical Lecturer</td>
+                            <td><input type="text" name="coursePractical" value="{{ coursePractical_text }}"></td>
+                        </tr>
+                        <tr>
+                            <td>Tutorial Lecturer</td>
+                            <td><input type="number" name="courseTutorial" value="{{ courseTutorial_text }}"></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
-            <br>
-
-            <div class="form-right">
-                <table class="enter-data-table">
-                    <tr style="text-align: center;"><th>Field</th><th>Input</th></tr>
-                    <tr>
-                        <td>Course Credit Hours</td>
-                        <td><input type="number" name="courseHour" value="{{ courseHour_text }}" required></td>
-                    </tr>
-                    <tr>
-                        <td>Practical Lecturer</td>
-                        <td><input type="text" name="coursePractical" value="{{ coursePractical_text }}"></td>
-                    </tr>
-                    <tr>
-                        <td>Tutorial Lecturer</td>
-                        <td><input type="number" name="courseTutorial" value="{{ courseTutorial_text }}"></td>
-                    </tr>
-                </table>
-            </div>
-
+            
             {% if courseUploadResult %}
                 <div class="result-message">{{ courseUploadResult }}</div>
             {% elif courseUploadErrors %}
